# agentic-strategy-evolution

./: .gitignore  README.md  defaults.yaml  pyproject.toml  run_campaign.py  run_iteration.py
.github/workflows/: claude.yml
docs/: architecture.md  data-model.md  protocol.md  quickstart.md
docs/case-studies/: blis.md
examples/: campaign.yaml
examples/blis/: README.md  campaign.yaml
orchestrator/: cli_dispatch.py  dispatch.py  engine.py  executor.py  fastfail.py  gates.py  llm_dispatch.py  prompt_loader.py  protocols.py  repo_context.py  util.py
prompts/methodology/: design.md  extract.md  frame.md  report.md  review_design.md  review_findings.md  run.md  run_analyze.md  run_plan.md  run_plan_revise.md  summarize_gate.md
schemas/: bundle.schema.yaml  campaign.schema.yaml  experiment_plan.schema.yaml  findings.schema.json  state.schema.json  summary.schema.json  trace.schema.json
templates/: campaign.yaml  findings.json
tests/: conftest.py  test_campaign.py  test_cli_dispatch.py  test_dispatch.py  test_engine.py  test_executor.py  test_fastfail.py  test_gates.py  test_integration.py  test_integration_llm.py  test_integration_real_execution.py  test_llm_dispatch.py  test_prompt_loader.py  test_schemas.py  test_templates.py
